--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -22,7 +22,10 @@
     "noUnusedParameters": true,
     "erasableSyntaxOnly": true,
     "noFallthroughCasesInSwitch": true,
-    "noUncheckedSideEffectImports": true
+    "noUncheckedSideEffectImports": true,
+    "paths": {
+      "fish-ui": ["./src/index.ts"]
+    }
   },
   "include": ["src"]
 }
